# libbitcoin-protocol

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  autogen.sh  bitprim-protocolConfig.cmake.in  build.cmd  configure.ac  install-cmake.sh  install-cmakepresets.sh  install-libbitcoin-protocol.sh  install-libbitcoin_protocol.sh  install.sh  interface.proto  libbitcoin-protocol-test_runner.sh  libbitcoin-protocol.pc.in  libbitcoin-protocolConfig.cmake.in  libbitcoin_protocol.pc.in  libbitcoin_protocol_test_runner.sh  update-cpp.sh  update-java.sh  update_cpp.sh  update_cpp_from_proto.sh  update_proto_src.sh  update_python.sh  version.hpp
.github/workflows/: ci.yml
builds/cmake/: CMakeLists.txt  CMakePresets.json
builds/cmake/modules/: FindMbedtls.cmake  FindZmq.cmake
builds/msvc/: debug.natvis
builds/msvc/vs2013/: libbitcoin-protocol.import.props  libbitcoin-protocol.sln  libbitcoin_protocol.sln
builds/msvc/vs2013/libbitcoin-protocol/: libbitcoin-protocol.props  libbitcoin-protocol.vcxproj  libbitcoin-protocol.vcxproj.filters  packages.config
builds/msvc/vs2013/libbitcoin-protocol-test/: libbitcoin-protocol-test.props  libbitcoin-protocol-test.vcxproj  libbitcoin-protocol-test.vcxproj.filters  packages.config
builds/msvc/vs2013/libbitcoin_protocol/: libbitcoin_protocol.props  libbitcoin_protocol.vcxproj  libbitcoin_protocol.vcxproj.filters  packages.config
builds/msvc/vs2015/: libbitcoin-protocol.sln
builds/msvc/vs2015/libbitcoin-protocol/: libbitcoin-protocol.props  libbitcoin-protocol.vcxproj  libbitcoin-protocol.vcxproj.filters  packages.config
builds/msvc/vs2015/libbitcoin-protocol-test/: libbitcoin-protocol-test.props  libbitcoin-protocol-test.vcxproj  libbitcoin-protocol-test.vcxproj.filters  packages.config
builds/msvc/vs2017/: libbitcoin-system.import.props
builds/msvc/vs2017/libbitcoin-protocol/: libbitcoin-protocol.vcxproj  libbitcoin-protocol.vcxproj.filters  packages.config
builds/msvc/vs2017/libbitcoin-protocol-test/: libbitcoin-protocol-test.vcxproj  libbitcoin-protocol-test.vcxproj.filters  packages.config
builds/msvc/vs2019/: libbitcoin-protocol.sln
builds/msvc/vs2019/libbitcoin-protocol/: libbitcoin-protocol.vcxproj  packages.config
builds/msvc/vs2019/libbitcoin-protocol-test/: libbitcoin-protocol-test.vcxproj  packages.config
builds/msvc/vs2022/: libbitcoin-protocol.sln
builds/msvc/vs2022/libbitcoin-protocol/: libbitcoin-protocol.vcxproj  libbitcoin-protocol.vcxproj.filters  packages.config
builds/msvc/vs2022/libbitcoin-protocol-test/: libbitcoin-protocol-test.props  libbitcoin-protocol-test.vcxproj  libbitcoin-protocol-test.vcxproj.filters  packages.config
builds/vscode/: protocol.code-workspace
cmake/: FindZeroMQ.cmake  protobuf_generate_cpp.cmake
cpp/: .gitignore  autogen.sh  configure.ac  libbitcoin_protocol.pc.in
cpp/include/bitcoin/: protocol.hpp
cpp/include/bitcoin/protocol/: define.hpp  interface.pb.h  message.hpp  primitives.hpp
cpp/src/: Makefile.am  interface.pb.cc  message.cpp
include/bitcoin/: Makefile.am  protocol.hpp
include/bitcoin/protocol/: boost.hpp  converter.hpp  define.hpp  interface.pb.h  message.hpp  network.hpp  packet.hpp  primitives.hpp  request_packet.hpp  response_packet.hpp  settings.hpp  version.hpp
include/bitcoin/protocol/config/: authority.hpp  config.hpp  endpoint.hpp  sodium.hpp
include/bitcoin/protocol/web/: bind_options.hpp  connection.hpp  connection_state.hpp  default_page_data.hpp  event.hpp  file_transfer.hpp  http.hpp  http_reply.hpp  http_request.hpp  json_string.hpp  manager.hpp  protocol_status.hpp  socket.hpp  ssl.hpp  utilities.hpp  websocket_frame.hpp  websocket_message.hpp  websocket_op.hpp  websocket_transfer.hpp
include/bitcoin/protocol/zmq/: authenticator.hpp  certificate.hpp  context.hpp  error.hpp  frame.hpp  identifiers.hpp  message.hpp  poller.hpp  socket.hpp  sodium.hpp  thread.hpp  worker.hpp  zeromq.hpp
include/bitcoin/protocol/zmq/impl/: poller.ipp
java/libbitcoin/protocol/: Interface.java
proto/bitcoin/protocol/: interface.proto
python/bitcoin/protocol/: interface_pb2.py
src/: Makefile.am  converter.cpp  interface.pb.cc  message.cpp  packet.cpp  request_packet.cpp  response_packet.cpp  settings.cpp
src/config/: authority.cpp  endpoint.cpp  sodium.cpp
src/web/: connection.cpp  default_page_data.cpp  http_reply.cpp  http_request.cpp  json_string.cpp  manager.cpp  socket.cpp  utilities.cpp  websocket_frame.cpp
src/zmq/: authenticator.cpp  certificate.cpp  context.cpp  error.cpp  frame.cpp  identifiers.cpp  message.cpp  poller.cpp  socket.cpp  sodium.cpp  thread.cpp  worker.cpp  zeromq.cpp
test/: Makefile.am  converter.cpp  main.cpp  protocol.cpp  test.cpp  test.hpp  utility.hpp
test/examples/: authenticator_example.cpp  poller_example.cpp
test/zmq/: authenticator.cpp  certificate.cpp  context.cpp  error.cpp  frame.cpp  identifiers.cpp  ironhouse2.cpp  message.cpp  poller.cpp  poller_test.cpp  socket.cpp  thread_test.cpp  worker.cpp  zmq.cpp
